# event-driven-alpha

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
analysis/: analyse_results.py  arima_vs_rest.py  final_model_comparison.py  publication_report.py  robustness_table.py  timeseries_vs_ml_benchmark.py
configs/: base.yaml  default.yaml  lightgmb.yaml  ridge.yaml  xgboost.yaml
eda/: cli.py  pipeline.py
outputs/: metrics.json  predictions.csv
src/data/: alignment.py  loader.py  macro_loader.py  news_loader.py
src/features/: embeddings.py  news_features.py  price_features.py
src/models/: arima_model.py  baseline_regression.py  lightgmb_model.py  linear.py  lstm_model.py  patchtst_model.py  registry.py  ridge.py  tcn_model.py  utils.py  xgboost_model.py
