[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "event_driven_alpha"
version = "0.1.0"
description = "Event-driven price modeling framework"
authors = [{name="Your Name"}]
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "statsmodels",
    "matplotlib",
    "seaborn",
    "tqdm",
    "pyyaml",
    "sentence-transformers",
    "lightgbm",
]

[tool.setuptools.packages.find]
where = ["src"]
